Implement annotation-based refactoring mapping test with remove/add method annotation